# burrow-core

./: .gitignore  LICENSE  README.md  pyproject.toml
burrow/: __init__.py  cli.py  manifest.json
burrow/core/auto-wiki/references/: new_domain.py.tmpl
burrow/core/dashboard/: Dashboard.md.tmpl  dashboard.css.tmpl
burrow/core/routines/: README.md  心跳员.md.tmpl
